--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,10 +3,9 @@
   padding: 0;
   margin: 0;
 }
-body {
-  width: 100vw;
-  height: 100vh;
-  background-color: green;
-  color: #fff;
-  overflow: hidden;
+
+.chatBg_card {
+  width: 400px;
+  height: 400px;
+  margin: auto;
 }
