--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,10 +3,14 @@
   padding: 0;
   margin: 0;
 }
+body {
+  /* font-family: Helvetica, sans-serif; */
+  font-family: 'Segoe UI', Helvetica, Lucida, sans-serif;
+}
 
 .btn {
   display: flex;
-  margin: 20px auto;
+  margin: 15px auto;
   color: #fff;
   background-color: #008069;
 }
