--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
-body {
-  /* font-family: Helvetica, sans-serif; */
-  font-family: 'Segoe UI', Helvetica, Lucida, sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .btn {
@@ -15,11 +13,5 @@ body {
   background-color: #008069;
 }
 .btn:hover {
-  color: #fff;
   background-color: #045849;
-}
-.user_info:hover {
-  transition: all 0.3s ease;
-  background-color: #bcbebe;
-  cursor: pointer;
 }
