--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,17 @@
   font-family: 'Roboto', sans-serif;
 }
 
+*::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track{
+  background-color:#f0f2f5;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #b3b7b9;
+  border-radius: 20px;
+}
+
 .btn {
   display: flex;
   margin: 15px auto;
