--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,3 +20,16 @@
   font-size: 14.5px;
   color: #3b4a54;
 }
+/* .logBtns {
+  background-color: '#25d366';
+  border: none;
+  color: #fff;
+  font-size: 16px;
+}
+.logBtns:hover {
+  background-color: #0aa884;
+  color: #fff;
+  font-weight: bold;
+  outline: none;
+  border: none;
+} */
